Add loading animation while artists are being fetched
- Add pure css loading animation
- Use JavaScript promises to delay loading animation fade-out until all artists are loaded on the page

--- a/wwwroot/Index.html
+++ b/wwwroot/Index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <title>Test API</title>
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <link rel="stylesheet" href="css/main.css" />
 </head>
 <body>
@@ -11,6 +12,10 @@
     <h2>Vote for your favourite artist</h2>
   </header>
   <main>
+
+    <div class="loader-wrapper">
+      <span class="loader"><span class="loader-inner"></span></span>
+    </div>
 
     <div id="artistsContainer">
 
